--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <h1>CALCULADORA SIMPLE</h1>
-
+    <div class="h1"><h1>Calculadora</h1></div>
+    
     <!--contenedor "div"-->
     <div class="container">
     <div class="calculator"> <!--dentrode este div, se va armar todo-->
@@ -36,7 +36,7 @@
                 <div class="keypad-button">.</div>
                 <div class="keypad-button yellow">=</div>
             </div>
-        </div>
+        </div> 
     </div>
     </div>
     <script src="js/calculadora.js"></script>
